--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
         android:text="@string/save"/>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFacts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@+id/editTextFact"
